[package]
name = "qemu-rust-generator"
version = "0.1.0"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
build = "build.rs"

[build-dependencies]
hyper = "*"
log = "*"
nom = "*"
parse_qapi = { path = "../parse_qapi" }
simple_logger = "*"

[dependencies]
bytes = "*"
json = "*"
log = "*"
mio = "*"
simple_logger = "*"
slab = "*"
