[package]
name = "qemu-rust"
description = "A library to interact with Qemu using the QMP protocol: http://wiki.qemu.org/QMP"
version = "0.1.1"
license = "MIT/Apache-2.0"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
build = "build.rs"
repository = "https://github.com/cholcombe973/qemu-rust"
documentation = "http://cholcombe973.github.io/qemu-rust"

[build-dependencies]
log = "~0.4"
nom = "~1.2"
# parse_qapi = "~0.1"
parse_qapi = { path = "../parse_qapi"}
simple_logger = "~0.5"

[dependencies]
bytes = "~0.4"
json = "~0.11"
log = "~0.4"
serde = "*"
serde_derive = "*"
serde_json = "*"
simple_logger = "~0.5"
